--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ DB_PASS = 1111
 
 
 
-# DBT_HOST = localhost
-# DBT_PORT = 5432
-# DBT_NAME = YlabHW1Test
-# DBT_USER = postgres
-# DBT_PASS = 1111
+DBT_HOST = localhost
+DBT_PORT = 5432
+DBT_NAME = YlabHW1Test
+DBT_USER = postgres
+DBT_PASS = 1111
