tests work with docker

--- a/.env-non-dev
+++ b/.env-non-dev
@@ -14,3 +14,11 @@ POSTGRES_PASSWORD=postgres
 
 # SMTP_USER=XXXXXXXXXXXX@gmail.com
 # SMTP_PASSWORD=XXXXXXXXX
+
+
+
+DBT_HOST = test_db
+DBT_PORT = 5432
+DBT_NAME = YlabHW1Test
+DBT_USER = postgres
+DBT_PASS = 1111
