--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -10,6 +10,11 @@ services:
       - 1221
     env_file:
       - .env-non-dev
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 30s
+      retries: 5
 
 
 
@@ -20,6 +25,11 @@ services:
       POSTGRES_DB: ${DBT_NAME}
       POSTGRES_USER: ${DBT_USER}
       POSTGRES_PASSWORD: ${DBT_PASS}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-U", "${DBT_USER}", "-d", "${DBT_NAME}"]
+      interval: 10s
+      timeout: 30s
+      retries: 5
 
 
   app:
